--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   video_player: ^0.10.5+2
+  get: ^4.3.8
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
