--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   video_player: ^0.10.5+2
   get: ^4.3.8
   flutter_staggered_grid_view: ^0.4.0
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
